fix: fix compilation according to changes on backend same branch